# Legal-Chatbot

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  requirements-backend.txt  requirements.txt  sample-ques.md
Intelligent-Legal-RAG-System/: .env.example  README.md  pyproject.toml  requirements.txt
Intelligent-Legal-RAG-System/backend/app/: __init__.py  main.py
Intelligent-Legal-RAG-System/backend/app/api/: __init__.py  schemas.py
Intelligent-Legal-RAG-System/backend/app/core/: logging.py
Intelligent-Legal-RAG-System/backend/app/services/: __init__.py  llm_service.py  rag_engine.py  raw_corpus.py
Intelligent-Legal-RAG-System/backend/data/faiss_index/: index.faiss  metadata.json
Intelligent-Legal-RAG-System/backend/data/raw/: ipc_full.json  sample_ipc.json  the_income_tax_act_1961.json  the_indian_evidence_act_1872.json  the_information_technology_act_2000.json  the_motor_vehicles_act_1988.json
Intelligent-Legal-RAG-System/backend/ingestion/: __init__.py  chunker.py  cleaner.py
Intelligent-Legal-RAG-System/backend/ingestion/scrapers/: base.py  indian_kanoon.py
Intelligent-Legal-RAG-System/backend/scripts/: build_combined_index.py  build_full_index.py  build_test_index.py  test_fetch.py  test_hybrid_304.py  test_query_304.py  test_rag.py  test_retrieval.py
Intelligent-Legal-RAG-System/docs/: flow.md
Intelligent-Legal-RAG-System/frontend/: streamlit_app.py
Intelligent-Legal-RAG-System/intelligent_legal_rag_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Intelligent-Legal-RAG-System/tests/: __init__.py
(+36 files in other folders)
